--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,6 @@ dependencies {
     annotationProcessor 'androidx.room:room-compiler:2.2.5'
     kapt "androidx.room:room-compiler:2.2.5"
 
+    implementation 'com.github.gzu-liyujiang.AndroidPicker:FilePicker:1.5.6'
+
 }
